# layers

./: .ai-dev-kit.json  .ai-starter-kit.json  .env.example  .gitignore  .impeccable.md  .vercelignore  AGENTS.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COSTS.md  DESIGN.md  MFDR.md  OPERATIONS.md  PLATFORMS.md  README.md  SETUP.md  VERIFICATION_GAPS.md  ai-dev-kit.lock.json  capacitor.config.ts  electron-builder.yml  eslint.config.mjs  generate-ios-icons.py  generate-tauri-icons.py  instrumentation.ts  llms.txt  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  promptfooconfig.yaml  remotion.config.ts  tsconfig.json  vercel.json  vitest.config.ts  vitest.eval.config.ts
.ai-dev-kit/: observability-requirements.yaml  project-profile.json  requirements.yaml  spec.md
.ai-starter/: config.json  hooks.disabled  progress.json  session.json
.claude/: settings.json  settings.json.strict
.codex/: config.toml  hooks.json.strict
.evidence/: expect-proof.json  feature-proof-plan.json  project-harness.json  proof-packet.json  ticket-proof.json  tier-0.json  tier-1.json  tier-2.json  tier-3.json  tier-latest.json
.expect/: logs.md
.github/: SECRETS.md
.husky/: post-commit  pre-commit  pre-push
.maestro/: README.md  smoke.yaml
app/: error.tsx  globals.css  landing.tsx  layout.tsx  page.tsx  recorder.tsx  template.tsx
branding/: BRAND_NARRATIVE.md  design-kit.html  htmlcanvas-playground.html
components/: agent-builder.tsx  ai-debug-panel.tsx  ai-tool-logos.tsx  audio-lines.stories.tsx  audio-lines.tsx  audio-recorder.stories.tsx  audio-recorder.tsx  audio-wave-ribbon.stories.tsx  auth-card.tsx  button.stories.tsx  chat-input.stories.tsx  chat-input.tsx  chat-message.stories.tsx  chat-message.tsx  floating-ask.stories.tsx  floating-ask.test.tsx  floating-ask.tsx  intake-form-view.stories.tsx  (+48 more)
src-tauri/: .gitignore  Cargo.toml  README.md  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+764 files in other folders)
