[package]
name = "audio-layer"
version = "0.1.0"
description = "audio-layer desktop shell — system-audio capture for the hosted Next.js app"
authors = ["The Near Factory"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "audio_layer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ─── Audio capture stubs ───────────────────────────────────────────
# Native audio bridges are NOT implemented yet. When we wire them:
#   - cpal: cross-platform input capture (mic + Linux PulseAudio)
#   - screencapturekit-rs (macOS 13+): system-audio loopback
#   - windows = { ... }: WASAPI loopback for Windows
# Keeping the deps absent on purpose — adding them pulls a heavy
# native toolchain we don't need until the recorder commands land.

[features]
custom-protocol = ["tauri/custom-protocol"]
