[package]
name = "audio-layer"
version = "0.1.0"
description = "audio-layer desktop shell — mic + system-audio capture for the hosted Next.js app"
authors = ["The Near Factory"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "audio_layer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Cross-platform mic capture: macOS (CoreAudio), Windows (WASAPI),
# Linux (ALSA / PulseAudio / PipeWire). The system-audio LOOPBACK
# path is platform-specific (ScreenCaptureKit on macOS, WASAPI
# loopback on Windows) and is staged for a separate PR — see the
# todo!() arms in src/lib.rs.
cpal = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
